Fixed dark mode problem
Now the letters are white in dark mode

--- a/client/src/components/ui/data-grid/data-grid.scss
+++ b/client/src/components/ui/data-grid/data-grid.scss
@@ -1,4 +1,5 @@
 .companies-grid {
+  color: var(--text-color1);
     * {
       color: var(--text-color1);
     }
